snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/maven-metadata.xml.sha1
98742c8f14de786c79d27bdc93d571c684d734ad